--- a/contactme.html
+++ b/contactme.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Countact Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <li>+966 53 268 2854</li>
     </ul>
 
-<form action="mailto:abdoga2028@gmail.com" enctype="text/plain" method="post">
+<form action="mailto:abdoga2028@gmail.com" enctype="text/plain" method="post      ">
     <fieldset style="width: 35%;">
         <legend>Send Message via gmail</legend>
         <label>Name: </label>
@@ -40,4 +41,4 @@
 
 </body>
 
-</html>
+</html> 
